--- a/templates/views/add-job.ejs
+++ b/templates/views/add-job.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header-add-job'); -%>
+<%- include('partials/header-admin'); -%>
 
 <div class="container">
   <h1 style="margin-top: 3rem;">Add New Job</h1>
