--- a/templates/views/dashboard.ejs
+++ b/templates/views/dashboard.ejs
@@ -1,3 +1,11 @@
 <%- include('partials/header', {role: 1}) -%>
-<div></div>
+<div class="row">
+    <h2>The Admin Dashboard</h2>
+    <div>The record finder help the administrator to see the status of the current jobs and the students applied to
+        those
+        jobs.</div>
+    <p>It also gives the status of the students with respect to a particular company.</p>
+</div>
+>
+<a class="btn btn-primary" href="/alljobstatus" role="button">Record Finder</a>
 <%- include('partials/footer') -%>
